nav bar with responsive for small device

--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>podcast TechWave</title>
-</head>
-<body>
-    <h1>Hello TechWave</h1>
-</body>
+    <link rel="stylesheet" href="./styles/nav.css" />
+    <!-- google font cdn link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- font awesome cdn link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body class="font-inter">
+    <header class="bg-color1">
+      <nav>
+        <h2 class="nav-head">Tech<span style="color: #fb09b4">Wave</span></h2>
+        <div class="nav-list">
+          <p>About</p>
+          <p>Episodes</p>
+          <p>Host</p>
+        </div>
+        <div>
+          <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></i></button>
+        </div>
+         <img class="hamburger-menu" src="assets/hamburger-menu.png" alt="">
+      </nav>
+    </header>
+  </body>
 </html>
