banner section with out responsive

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Tailwind -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="font-inter">
     <header class="bg-color1">
@@ -31,10 +33,42 @@
           <p>Host</p>
         </div>
         <div>
-          <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></i></button>
+          <button class="btn">
+            Subscribe <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
-         <img class="hamburger-menu" src="assets/hamburger-menu.png" alt="">
+        <img class="hamburger-menu" src="assets/hamburger-menu.png" alt="" />
       </nav>
+      <div>
+        <hr style="border: 1px solid rgb(50, 49, 49)" />
+      </div>
+      <div class="banner-parent">
+        <div>
+          <img src="assets/hero-bg.png" alt="" />
+        </div>
+        <div class="banner-child-1">
+          <img class="banner-child1" src="assets/hero-circle.png" alt="" />
+        </div>
+        <div class="banner-child-2">
+          <img class="banner-child2" src="assets/microphone.png" alt="" />
+        </div>
+        <div class="banner-new">NEW</div>
+        <div class="banner-div">
+          <h1 class="banner-head">TechWave</h1>
+          <p class="banner-des">
+            Your daily dose of tech insights, productivity hacks, and personal
+            growth
+          </p>
+          <div class="banner-btn">
+            <button class="btn">
+              <img src="assets/spotify.png" alt="" />Listen on Spotify
+            </button>
+            <button class="banner-2nd-btn">
+              <img src="assets/message.png" alt="" />Subscribe
+            </button>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
