about section done with responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>podcast TechWave</title>
     <link rel="stylesheet" href="./styles/nav.css" />
+    <link rel="stylesheet" href="./styles/about.css" />
     <!-- google font cdn link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -70,5 +71,41 @@
         </div>
       </div>
     </header>
+    <main>
+      <!-- About section -->
+      <section class="bg-color1 about-section">
+        <div class="about-div">
+          <h1>About the Podcast</h1>
+          <p class="about-des">
+            TechWave is your go-to podcast for staying ahead in the fast-paced
+            world of technology. We break down complex topics into digestible
+            insights, explore productivity strategies that actually work, and
+            share stories of personal growth from industry leaders.
+          </p>
+          <p class="about-des1">
+            Join thousands of young professionals and tech enthusiasts who start
+            their day with TechWave.
+          </p>
+        </div>
+        <div class="about-list">
+          <div>
+            <h2>150K+</h2>
+            <p>Monthly Listeners</p>
+          </div>
+          <div>
+            <h2>200K+</h2>
+            <p>Monthly Listeners</p>
+          </div>
+          <div>
+            <h2>4.9*</h2>
+            <p>Monthly Listeners</p>
+          </div>
+          <div>
+            <h2>50+</h2>
+            <p>Monthly Listeners</p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
