choose and feature section done without responsive

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -72,7 +72,7 @@
       </div>
     </header>
     <main>
-      <!-- About section -->
+      <!-- Choose  section -->
       <section class="bg-color1 about-section">
         <div class="about-div">
           <h1>About the Podcast</h1>
@@ -103,6 +103,166 @@
           <div>
             <h2>50+</h2>
             <p>Monthly Listeners</p>
+          </div>
+        </div>
+      </section>
+      <section class="bg-color2 choose-section">
+        <div>
+          <h1 class="choose-head">Why Choose TechWave</h1>
+        </div>
+        <div class="choose-grid-container grid grid-cols-1 lg:grid-cols-3">
+          <div class="grid-item1">
+            <div class="grid-card1">
+              <img src="assets/headphone.png" alt="" />
+              <h2>Premium Audio Quality</h2>
+              <p>
+                Experience crystal-clear sound with professional-grade recording
+                equipment and expert audio engineering. Every episode is
+                mastered for optimal listening across all devices and platforms.
+              </p>
+            </div>
+          </div>
+          <div class="grid-item2">
+            <div class="grid-card2">
+              <img src="assets/device.png" alt="" />
+              <h2>Mobile Friendly</h2>
+              <p>
+                Listen on the go with seamless mobile experience and offline
+                downloads.
+              </p>
+            </div>
+          </div>
+          <div class="grid-item3">
+            <div class="grid-card2">
+              <img src="assets/location.png" alt="" />
+              <h2>Global Community</h2>
+              <p>
+                Connect with tech enthusiasts from over 120 countries worldwide.
+              </p>
+            </div>
+          </div>
+          <div class="grid-item4">
+            <div class="grid-card2">
+              <img src="assets/location.png" alt="" />
+              <h2>Exclusive Interviews</h2>
+              <p>
+                Get unprecedented access to industry titans, startup founders,
+                and tech visionaries. Our host secures exclusive conversations
+                you won't find anywhere else, diving deep into their journeys,
+                failures, and success strategies.
+              </p>
+            </div>
+          </div>
+          <div class="grid-item5">
+            <div class="grid-card2">
+              <img src="assets/resource.png" alt="" />
+              <h2>Rich Resources</h2>
+              <p>
+                Access show notes, transcripts, and additional learning
+                materials for every episode.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Feature Episode Section -->
+      <section class="bg-color1 feature">
+        <h1 class="choose-head">Featured Episodes</h1>
+        <div
+          class="feature-grid grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
+        >
+          <div class="feature-card">
+            <iframe
+              width="322"
+              height="250"
+              src="https://www.youtube.com/embed/USAGA_AlRJI?si=cp4R-oodTcFsqgQH"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <div class="card-btm">
+              <h2>The Future of AI in Everyday Life</h2>
+              <p>
+                Exploring how artificial intelligence is transforming our daily
+                routines and what to expect in the next decade.
+              </p>
+              <div class="icon-time">
+                <img class="clock-icon" src="assets/clock.png" alt="" />
+                <p class="time">42 min</p>
+              </div>
+            </div>
+          </div>
+          <div class="feature-card">
+            <iframe
+              width="322"
+              height="250"
+              src="https://www.youtube.com/embed/USAGA_AlRJI?si=cp4R-oodTcFsqgQH"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <div class="card-btm">
+              <h2>The Future of AI in Everyday Life</h2>
+              <p>
+                Exploring how artificial intelligence is transforming our daily
+                routines and what to expect in the next decade.
+              </p>
+              <div class="icon-time">
+                <img class="clock-icon" src="assets/clock.png" alt="" />
+                <p class="time">42 min</p>
+              </div>
+            </div>
+          </div>
+          <div class="feature-card">
+            <iframe
+              width="322"
+              height="250"
+              src="https://www.youtube.com/embed/USAGA_AlRJI?si=cp4R-oodTcFsqgQH"
+              title="YouTube video player"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+                web-share;
+              "
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <div class="card-btm">
+              <h2>The Future of AI in Everyday Life</h2>
+              <p>
+                Exploring how artificial intelligence is transforming our daily
+                routines and what to expect in the next decade.
+              </p>
+              <div class="icon-time">
+                <img class="clock-icon" src="assets/clock.png" alt="" />
+                <p class="time">42 min</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
