--- a/index.html
+++ b/index.html
@@ -266,6 +266,25 @@
           </div>
         </div>
       </section>
+      <!-- Host section -->
+       <section class="bg-color1 host-section">
+        <h1>Meet the Host</h1>
+        <div class="host-flex bg-color2">
+          <div>
+            <img class="host-img" src="assets/host.png" alt="">
+          </div>
+          <div>
+            <h2 class="alex">Alex Kumar</h2>
+            <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+            <div class="social-icon">
+              <img src="assets/linkedin.png" alt="">
+              <img src="assets/x.png" alt="">
+              <img src="assets/instagram.png" alt="">
+              <img src="assets/youtube.png" alt="">
+            </div>
+          </div>
+        </div>
+       </section>
     </main>
   </body>
 </html>
