footer sectio done with responsive

--- a/index.html
+++ b/index.html
@@ -267,24 +267,62 @@
         </div>
       </section>
       <!-- Host section -->
-       <section class="bg-color1 host-section">
+      <section class="bg-color1 host-section">
         <h1>Meet the Host</h1>
         <div class="host-flex bg-color2">
           <div>
-            <img class="host-img" src="assets/host.png" alt="">
+            <img class="host-img" src="assets/host.png" alt="" />
           </div>
           <div>
             <h2 class="alex">Alex Kumar</h2>
-            <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+            <p>
+              Tech entrepreneur, productivity expert, and lifelong learner. Alex
+              has been in the tech industry for over 10 years, working with
+              startups and Fortune 500 companies. Through TechWave, Alex shares
+              insights from industry leaders and practical advice for anyone
+              looking to grow in tech.
+            </p>
             <div class="social-icon">
-              <img src="assets/linkedin.png" alt="">
-              <img src="assets/x.png" alt="">
-              <img src="assets/instagram.png" alt="">
-              <img src="assets/youtube.png" alt="">
+              <img src="assets/linkedin.png" alt="" />
+              <img src="assets/x.png" alt="" />
+              <img src="assets/instagram.png" alt="" />
+              <img src="assets/youtube.png" alt="" />
             </div>
           </div>
         </div>
-       </section>
+      </section>
     </main>
+    <footer class="bg-color2">
+      <div class="footer-img">
+        <img src="assets/footer-bg.png" alt="" />
+
+        <div class="footer-wave">
+          <h1 class="footer-head">
+            Tech <span style="color: #fb09b4"> Wave</span>
+          </h1>
+          <div class="footer-flex">
+            <div>
+              <img src="assets/spotify.png" alt="" />
+              <p>Spotify</p>
+            </div>
+            <div>
+              <img src="assets/apple-podcast.png" alt="" />
+              <p>Apple Products</p>
+            </div>
+            <div>
+              <img src="assets/youtube-podcast.png" alt="" />
+              <p>youtube</p>
+            </div>
+            <div>
+              <img src="assets/twitter.png" alt="" />
+              <p>Twitter</p>
+            </div>
+          </div>
+          <div class="rights">
+            © 2026 TechWave Podcast. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
