--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </header>
     <main>
-      <!-- Choose  section -->
+      <!-- About   section -->
       <section class="bg-color1 about-section">
         <div class="about-div">
           <h1>About the Podcast</h1>
@@ -106,11 +106,12 @@
           </div>
         </div>
       </section>
+      <!-- Choose section -->
       <section class="bg-color2 choose-section">
         <div>
           <h1 class="choose-head">Why Choose TechWave</h1>
         </div>
-        <div class="choose-grid-container grid grid-cols-1 lg:grid-cols-3">
+        <div class="choose-grid-container grid grid-cols-1  lg:grid-cols-3">
           <div class="grid-item1">
             <div class="grid-card1">
               <img src="assets/headphone.png" alt="" />
@@ -167,7 +168,7 @@
       </section>
       <!-- Feature Episode Section -->
       <section class="bg-color1 feature">
-        <h1 class="choose-head">Featured Episodes</h1>
+        <h1 class="feature-head">Featured Episodes</h1>
         <div
           class="feature-grid grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
         >
