update all section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <!-- Choose section -->
       <section class="bg-color2 choose-section">
         <div>
-          <h1 class="choose-head">Why Choose TechWave</h1>
+          <h1 class="feature-head">Why Choose TechWave</h1>
         </div>
         <div class="choose-grid-container grid grid-cols-1  lg:grid-cols-3">
           <div class="grid-item1">
