--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div>
           <h1 class="feature-head">Why Choose TechWave</h1>
         </div>
-        <div class="choose-grid-container grid grid-cols-1  lg:grid-cols-3">
+        <div class="choose-grid-container grid grid-cols-1 lg:grid-cols-3">
           <div class="grid-item1">
             <div class="grid-card1">
               <img src="assets/headphone.png" alt="" />
@@ -144,7 +144,7 @@
           </div>
           <div class="grid-item4">
             <div class="grid-card2">
-              <img src="assets/location.png" alt="" />
+              <img src="assets/zap-fast.png" alt="" />
               <h2>Exclusive Interviews</h2>
               <p>
                 Get unprecedented access to industry titans, startup founders,
@@ -176,7 +176,7 @@
             <iframe
               width="322"
               height="250"
-              src="https://www.youtube.com/embed/USAGA_AlRJI?si=cp4R-oodTcFsqgQH"
+              src="https://www.youtube.com/embed/KKNCiRWd_j0?si=thRyX-0q56WjXM5d"
               title="YouTube video player"
               frameborder="0"
               allow="
@@ -199,7 +199,7 @@
               </p>
               <div class="icon-time">
                 <img class="clock-icon" src="assets/clock.png" alt="" />
-                <p class="time">42 min</p>
+                <p class="time">22 min</p>
               </div>
             </div>
           </div>
@@ -207,7 +207,7 @@
             <iframe
               width="322"
               height="250"
-              src="https://www.youtube.com/embed/USAGA_AlRJI?si=cp4R-oodTcFsqgQH"
+              src="https://www.youtube.com/embed/LK1Hd_zjypc?si=O4MRAJ2V7MA-MWdE"
               title="YouTube video player"
               frameborder="0"
               allow="
@@ -223,14 +223,14 @@
               allowfullscreen
             ></iframe>
             <div class="card-btm">
-              <h2>The Future of AI in Everyday Life</h2>
+              <h2>It's The Idea what is Matter You Think</h2>
               <p>
-                Exploring how artificial intelligence is transforming our daily
-                routines and what to expect in the next decade.
+                It’s the idea that matters most. Your thoughts are the starting
+                point of every great creation.Ideas are the foundation of innovation.
               </p>
               <div class="icon-time">
                 <img class="clock-icon" src="assets/clock.png" alt="" />
-                <p class="time">42 min</p>
+                <p class="time">22 min</p>
               </div>
             </div>
           </div>
@@ -238,7 +238,7 @@
             <iframe
               width="322"
               height="250"
-              src="https://www.youtube.com/embed/USAGA_AlRJI?si=cp4R-oodTcFsqgQH"
+              src="https://www.youtube.com/embed/U5HvuKEjH6g?si=rAHdVX682ZiK9Dd5"
               title="YouTube video player"
               frameborder="0"
               allow="
@@ -254,14 +254,14 @@
               allowfullscreen
             ></iframe>
             <div class="card-btm">
-              <h2>The Future of AI in Everyday Life</h2>
+              <h2>The Spend of Your Time in Everyday Life</h2>
               <p>
                 Exploring how artificial intelligence is transforming our daily
                 routines and what to expect in the next decade.
               </p>
               <div class="icon-time">
                 <img class="clock-icon" src="assets/clock.png" alt="" />
-                <p class="time">42 min</p>
+                <p class="time">12 min</p>
               </div>
             </div>
           </div>
@@ -320,7 +320,8 @@
             </div>
           </div>
           <div class="rights">
-            © 2026 TechWave Podcast. All rights reserved.
+            <div><hr class="footer-divider" /></div>
+            <div>© 2026 TechWave Podcast. All rights reserved.</div>
           </div>
         </div>
       </div>
